<resources>
    <string name="app_name">ThinkWeather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city">City</string>
    <string name="date_and_time">Date and Time</string>
    <string name="_75">75</string>
    <string name="f">°F</string>
    <string name="c">°C</string>
    <string name="conditions">Conditions</string>
    <string name="input_your_city">Input your city: </string>
    <string name="city_name_here">City name here</string>
    <string name="input">Input</string>
</resources>
