<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/gradient_bg"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/city"
        android:textColor="#ffffff"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/date_and_time"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/_75"
            android:textColor="#cfcfcf"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="99dp"
            android:text="@string/f"
            android:textColor="#cfcfcf"
            android:textSize="50sp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <RadioButton
                android:id="@+id/fahrenheit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/f" />

            <RadioButton
                android:id="@+id/centigrade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/c" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/conditions"
        android:textColor="#FF4081"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/input_your_city"
            android:textSize="20sp" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/city_name_here" />
    </LinearLayout>

    <Button
        android:id="@+id/refreshButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#24096b"
        android:text="@string/input"
        android:textColor="#ffffff" />

    <!--<HorizontalScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <ImageView
                android:id="@+id/nextDayImg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/nextDay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/maxTempNextDay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nextDay1"
                android:text="MaxTemp" />

            <TextView
                android:id="@+id/minTempNextDay1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maxTempNextDay1"
                android:text="MinTemp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/nextDayImg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/nextDay2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/maxTempNextDay2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nextDay2"
                android:text="MaxTemp" />

            <TextView
                android:id="@+id/minTempNextDay2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maxTempNextDay2"
                android:text="MinTemp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/nextDayImg3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/nextDay3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/maxTempNextDay3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nextDay3"
                android:text="MaxTemp" />

            <TextView
                android:id="@+id/minTempNextDay3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maxTempNextDay3"
                android:text="MinTemp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/nextDayImg4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/nextDay4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/maxTempNextDay4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nextDay4"
                android:text="MaxTemp" />

            <TextView
                android:id="@+id/minTempNextDay4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maxTempNextDay4"
                android:text="MinTemp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/nextDayImg5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/nextDay5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Day"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/maxTempNextDay5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nextDay5"
                android:text="MaxTemp" />

            <TextView
                android:id="@+id/minTempNextDay5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maxTempNextDay5"
                android:text="MinTemp" />
        </RelativeLayout>
        </LinearLayout>
    </HorizontalScrollView>-->

</LinearLayout>